# assessment

./: main.py  pyproject.toml
datastore/: state.json
